comments added, imporved routing

--- a/templates/employee.html
+++ b/templates/employee.html
@@ -6,7 +6,7 @@
     <title>Employee</title>
 </head>
 <body>
-<h1><a href="../../">Address Book</a> / <a href="../updateOrganisation?id={{organisation['_id']}}">{{organisation['name']}}</a> / {{employee['name']}}</h1>
+<h1><a href="../../">Address Book</a> / <a href="../organisation?id={{organisation['_id']}}">{{organisation['name']}}</a> / {{employee['name']}}</h1>
 <div class="new_box">
 <form action="/updateEmployee" method="post" autofocus>
     <h3>Edit Employee</h3>
