--- a/templates/employee.html
+++ b/templates/employee.html
@@ -12,7 +12,7 @@
     <h3>Edit Employee</h3>
     <label>Name</label><br>
     <input type="text" name="name" value="{{employee['name']}}" required><br>
-    <label>Contact</label><br>
+    <label>Contact Information</label><br>
     <input type="text" name="contact" value="{{employee['contact']}}" required><br>
     <input type="hidden" name="id" value="{{employee['_id']}}">
     <input class="button" type="submit" value="Submit Edit">
