--- a/templates/index.html
+++ b/templates/index.html
@@ -12,11 +12,11 @@
 <h1>Address Book</h1>
 
 <div class="new_box">
-<form action="/" method="post" autofocus>
+<form action="/organisation" method="post" autofocus>
     <h3>New Organisation</h3>
     <label>Name</label><br>
     <input type="text" name="name" placeholder="Name" required><br>
-    <label>Contact</label><br>
+    <label>Contact Information</label><br>
     <input type="text" name="contact" placeholder="Contact" required><br>
     <br>
     <input class="button" type="submit" value="Add Organisation">
