--- a/templates/organisation.html
+++ b/templates/organisation.html
@@ -12,7 +12,7 @@
     <h3>Edit Organisation</h3>
     <label>Name</label><br>
     <input type="text" name="name" value="{{organisation['name']}}" required><br>
-    <label>Contact</label><br>
+    <label>Contact Information</label><br>
     <input type="text" name="contact" value="{{organisation['contact']}}" required><br>
     <input type="hidden" name="id" value="{{organisation['_id']}}">
     <input class="button" type="submit" value="Submit Edit">
@@ -38,7 +38,7 @@
     <h3>New Employee</h3>
     <label>Name</label><br>
     <input type="text" name="name" placeholder="Name" required><br>
-    <label>Contact</label><br>
+    <label>Contact Information</label><br>
     <input type="text" name="contact" placeholder="Contact" required><br>
     <input type="hidden" name="id" value="{{organisation['_id']}}">
     <input class="button" type="submit" value="Add Employee">
